--- a/archox-style.css
+++ b/archox-style.css
@@ -1,5 +1,5 @@
-@media only screen and (min-width: 768px) {
 
+@media only screen and (max-width: 600px) {
 /* to use Computer Modern Roman Serif font */
 @font-face{
     font-family: 'cmu_serifroman';
@@ -12,14 +12,196 @@
     font-style: normal;
 }
 
-@media only screen and (max-device-width: 480px) {
+h1{
+	color: black;
+	font-family: 'cmu_serifroman';
+	font-size: 64px;
+	text-align: center;
+	line-height: 5%;
+}
+h2{
+	color: black;
+	font-family: 'cmu_serifroman';
+	font-size:42px;
+}
 
-	
-.post-1650 .x-container.max.width {
+h3{
+	color: black;
+	font-family: 'cmu_serifroman';
+	font-size:38px;
+}
 
-padding: 0px 0px; 
-} }
+h4{
+	color: black;
+	font-family: 'cmu_serifroman';
+	font-size:32px;
+}
 
+p{
+	color: black;
+	font-family: 'cmu_serifroman';
+	font-size:20px;
+	text-indent:30px;
+}
+
+div{
+	color: black;
+	font-family: 'cmu_serifroman';
+	font-size:20px;
+
+}
+
+ul{
+	color: black;
+	font-family: 'cmu_serifroman';
+	font-size:20px;
+}
+
+ol{
+	color: black;
+	font-family: 'cmu_serifroman';
+	font-size:20px;
+}
+
+a{
+	font-family: 'cmu_serifroman';
+	font-size:20px;
+}
+
+img{
+	display:block;
+	margin-left:auto;
+	margin-right:auto;
+}
+
+figcaption{
+	color: black;
+	font-family: 'cmu_serifroman';
+	font-size:20px;
+
+}
+
+pre{
+	color: black;
+	background: #ffeff0;
+	word-wrap: break-word;
+	box-decoration-break: clone;
+	padding:0;
+	border-radius: .2rem;
+	font-family:Consolas,Monaco,Lucida Console,Liberation Mono,DejaVu Sans Mono,Bitstream Vera Sans Mono,Courier New;
+	font-size:18px;
+	text-indent:30px;
+}
+}
+
+@media only screen and (min-width: 600px) {
+/* to use Computer Modern Roman Serif font */
+@font-face{
+    font-family: 'cmu_serifroman';
+    src: url('cmunrm-webfont.eot');
+    src: url('cmunrm-webfont.eot?#iefix') format('embedded-opentype'),
+         url('cmunrm-webfont.woff') format('woff'),
+         url('cmunrm-webfont.ttf') format('truetype'),
+         url('cmunrm-webfont.svg#cmu_serifroman') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+h1{
+	color: black;
+	font-family: 'cmu_serifroman';
+	font-size: 64px;
+	text-align: center;
+	line-height: 5%;
+}
+h2{
+	color: black;
+	font-family: 'cmu_serifroman';
+	font-size:42px;
+}
+
+h3{
+	color: black;
+	font-family: 'cmu_serifroman';
+	font-size:38px;
+}
+
+h4{
+	color: black;
+	font-family: 'cmu_serifroman';
+	font-size:32px;
+}
+
+p{
+	color: black;
+	font-family: 'cmu_serifroman';
+	font-size:20px;
+	text-indent:30px;
+}
+
+div{
+	color: black;
+	font-family: 'cmu_serifroman';
+	font-size:20px;
+
+}
+
+ul{
+	color: black;
+	font-family: 'cmu_serifroman';
+	font-size:20px;
+}
+
+ol{
+	color: black;
+	font-family: 'cmu_serifroman';
+	font-size:20px;
+}
+
+a{
+	font-family: 'cmu_serifroman';
+	font-size:20px;
+}
+
+img{
+	display:block;
+	margin-left:auto;
+	margin-right:auto;
+}
+
+figcaption{
+	color: black;
+	font-family: 'cmu_serifroman';
+	font-size:20px;
+
+}
+
+pre{
+	color: black;
+	background: #ffeff0;
+	word-wrap: break-word;
+	box-decoration-break: clone;
+	padding:0;
+	border-radius: .2rem;
+	font-family:Consolas,Monaco,Lucida Console,Liberation Mono,DejaVu Sans Mono,Bitstream Vera Sans Mono,Courier New;
+	font-size:18px;
+	text-indent:30px;
+}
+}
+
+
+@media only screen and (min-width: 768px) {
+/* to use Computer Modern Roman Serif font */
+@font-face{
+    font-family: 'cmu_serifroman';
+    src: url('cmunrm-webfont.eot');
+    src: url('cmunrm-webfont.eot?#iefix') format('embedded-opentype'),
+         url('cmunrm-webfont.woff') format('woff'),
+         url('cmunrm-webfont.ttf') format('truetype'),
+         url('cmunrm-webfont.svg#cmu_serifroman') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
 
 h1{
 	color: black;
@@ -117,6 +299,6 @@ pre{
 	font-size:18px;
 	text-indent:50px;
 	margin-left:250px;
-	margin-right:250px;	
+	margin-right:250px;
 }
 }
