update to actual working css that's in use

--- a/archox-style.css
+++ b/archox-style.css
@@ -108,6 +108,10 @@ figcaption{
 	color: black;
 	font-family: 'cmu_serifroman';
 	font-size:20px;
+	margin-left:250px;
+	margin-right:250px;
+	text-align: center;
+
 
 }
 
@@ -233,6 +237,9 @@ figcaption{
 	color: black;
 	font-family: 'cmu_serifroman';
 	font-size:20px;
+	margin-left:250px;
+	margin-right:250px;
+	text-align: center;
 
 }
 
@@ -374,6 +381,9 @@ figcaption{
 	color: black;
 	font-family: 'cmu_serifroman';
 	font-size:20px;
+	margin-left:250px;
+	margin-right:250px;
+	text-align: center;
 
 }
 
