--- a/archox-style.css
+++ b/archox-style.css
@@ -280,6 +280,157 @@ h1{
 	font-family: 'cmu_serifroman';
 	font-size: 128px;
 	text-align: center;
+	margin-left:100px;
+	margin-right:100px;
+	line-height: 5%;
+}
+h2{
+	color: black;
+	font-family: 'cmu_serifroman';
+	font-size:42px;
+	margin-left:100px;
+	margin-right:100px;
+}
+
+h3{
+	color: black;
+	font-family: 'cmu_serifroman';
+	font-size:38px;
+	margin-left:100px;
+	margin-right:100px;
+}
+
+h4{
+	color: black;
+	font-family: 'cmu_serifroman';
+	font-size:32px;
+	margin-left:100px;
+	margin-right:100px;
+}
+
+p{
+	color: black;
+	font-family: 'cmu_serifroman';
+	font-size:20px;
+	text-indent:50px;
+	margin-left:100px;
+	margin-right:100px;
+}
+
+div{
+	color: black;
+	font-family: 'cmu_serifroman';
+	font-size:20px;
+	margin-left:100px;
+	margin-right:100px;
+
+}
+
+.inlineblock{
+	display: inline-block;
+	font-size:20px;
+	text-align: left;
+}
+
+.left {
+	width: 25%;
+	float: left;
+	display: block;
+	margin-left:150px;
+	margin-right:0px;
+}
+
+.right {
+	width: 30%;
+	float: left;
+	display: block;
+	margin-left:50px;
+	margin-right:100px;
+}
+
+.clearcolumns {
+	color: black;
+	font-family: 'cmu_serifroman';
+	font-size:20px;
+	background-color: pink;
+	clear:both;
+}
+
+ul{
+	color: black;
+	font-family: 'cmu_serifroman';
+	font-size:20px;
+	margin-left:100px;
+	margin-right:100px;
+}
+
+ol{
+	color: black;
+	font-family: 'cmu_serifroman';
+	font-size:20px;
+	margin-left:100px;
+	margin-right:100px;
+}
+
+a{
+	font-family: 'cmu_serifroman';
+	font-size:20px;
+}
+
+img{
+	display:block;
+	margin-left:auto;
+	margin-right:auto;
+}
+
+figcaption{
+	color: black;
+	font-family: 'cmu_serifroman';
+	font-size:20px;
+	max-width: 600px;
+	margin-left:auto;
+	margin-right:auto;
+	text-align: center;
+
+}
+
+pre{
+/*code block*/
+	color: black;
+	background: #ffeff0;
+	overflow: scroll;
+		overflow-x: scroll;
+		overflow-y: scroll;
+	box-decoration-break: clone;
+	padding:0;
+	border-radius: .2rem;
+	font-family:Consolas,Monaco,Lucida Console,Liberation Mono,DejaVu Sans Mono,Bitstream Vera Sans Mono,Courier New;
+	font-size:18px;
+	text-indent:50px;
+	margin-left:250px;
+	margin-right:250px;
+	width:auto;
+	}
+}
+
+@media only screen and (min-width: 1024px) {
+/* to use Computer Modern Roman Serif font */
+@font-face{
+    font-family: 'cmu_serifroman';
+    src: url('cmunrm-webfont.eot');
+    src: url('cmunrm-webfont.eot?#iefix') format('embedded-opentype'),
+         url('cmunrm-webfont.woff') format('woff'),
+         url('cmunrm-webfont.ttf') format('truetype'),
+         url('cmunrm-webfont.svg#cmu_serifroman') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+h1{
+	color: black;
+	font-family: 'cmu_serifroman';
+	font-size: 128px;
+	text-align: center;
 	margin-left:250px;
 	margin-right:250px;
 	line-height: 5%;
@@ -412,5 +563,3 @@ pre{
 	width:auto;
 	}
 }
-
-
